# Sentinel-Env

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  HYPERIONRL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PRE_SUBMISSION_CHECKLIST.md  QUICK_REFERENCE.md  QWEN.md  README.md  SUBMISSION.md  __init__.py  apply_comprehensive_fixes.py  clear_cache_and_verify.py  client.py  code_review.md  codebase_analysis.md  dashboard.py  demo-output.txt  deploy-hf-now.py  deploy-hf.py  deploy.bat  fix-hf-space.py  garak_config.yaml  hf-space-readme.md  inference.py  inference_logging.py  models.py  openenv.yaml  prepare_for_submission.bat  pyproject.toml  start-monitoring.bat  test_deployed_space.py  test_hf_space.py  test_hyperion_e2e.py  test_jailbreak_results.json  test_moe_vectorized.py  test_multi_step.py  trackio_dashboard.py  train.py  (+3 more)
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  CLIENT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  HYPERIONRL_TRAINING_GUIDE.md  MIDDLEWARE_ARCHITECTURE.md  README.md  SECURITY_MODEL.md
docs/superpowers/plans/: 2026-04-08-task6-validation-report.md
scripts/: audit.py  comprehensive-test.py  demo-live.py  generate_visualizations.py  surgical-audit.py  usage-guide.py  validate_ground_truths.py
server/: Dockerfile  __init__.py  app.py  attack_engine.py  batch_api.py  dependencies.py  episode_manager.py  grader.py  hyperion_policy_network.py  mcts_reasoning.py  middleware.py  rate_limiter.py  requirements.txt  resilience_profile.py  reward_shaper.py  sentinel_environment.py  sentinel_gym_env.py  text_embedder.py  trackio_tracker.py  training_loop.py  wandb_tracker.py
server/attacks/: __init__.py  advanced_jailbreaks.py  basic_injections.py  jailbreak_loader.py  social_engineering.py  stealth_exfiltration.py
tests/: test_attack_engine.py  test_client.py  test_concurrent_episodes.py  test_e2e_inference.py  test_environment.py  test_episode_manager.py  test_garak_integration.py  test_grader.py  test_inference_logging.py  test_integration.py  test_llm_integration.py  test_load.py  test_mutation_engine.py  test_property_based.py  test_rate_limiter.py  test_resilience_profile.py  test_reward_shaper.py  test_server_app.py  test_validation.py
