[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-env"
version = "1.0.0"
description = "AI Agent Safety & Jailbreak Detection Environment"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openenv-core>=0.2.0",
    "structlog>=25.0.0",
    "prometheus-client>=0.24.0",
]

[project.optional-dependencies]
# Core dev tools
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=5.0",
    "coverage>=7.0",
    "ruff>=0.15.0",
    "mypy>=1.20.0",
    "bandit>=1.9.0",
    "pre-commit>=4.5.0",
    "hypothesis>=6.150.0",
    "structlog>=25.5.0",
]

# Observability & monitoring
observability = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-prometheus",
    "wandb>=0.25.0",
    "trackio>=0.1.0",
    "sentry-sdk>=2.57.0",
    "prometheus-client>=0.24.0",
]

# LLM security testing (garak)
llm-security = [
    "garak>=0.14.0",
    "hud-python>=0.5.0",
    "litellm>=1.82.0",
]

# ML/LLM model dependencies (required by garak and training)
ml = [
    "transformers>=5.5.0",
    "torch>=2.11.0",
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.0",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.0",
    "tiktoken>=0.12.0",
    "datasets>=3.6.0",
]

# LLM provider integrations
llm-providers = [
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langgraph>=1.1.0",
    "langsmith>=0.7.0",
    "cohere>=5.21.0",
    "mistralai>=1.5.0",
    "ollama>=0.6.0",
    "replicate>=1.0.0",
]

# Translation & NLP tools
translation = [
    "deepl>=1.17.0",
    "google-cloud-translate>=3.25.0",
    "nltk>=3.9.0",
]

# Graph analysis
graph = [
    "networkx>=3.6.0",
]

[tool.setuptools.packages.find]
include = ["server*"]
exclude = ["model_checkpoints_hyperion*", "tests*", "scripts*", "docs*", "tools*"]

[project.scripts]
sentinel-server = "server.app:main"
server = "server.app:main"

[tool.uv]
managed = true
dev-dependencies = ["sentinel-env[dev,observability]"]

# ── Ruff Configuration ──────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "tools/",
    "docs/",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # bugbear
    "SIM",   # simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (FastAPI uses this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "RUF059", "SIM117"]  # Allow asserts, magic values, unused unpacks, nested with
"inference.py" = ["T201", "RUF059", "SIM105", "E402"]  # Allow print, unused unpacks, imports after helper function
"server/attacks/*" = ["RUF001", "RUF003"]  # Unicode homoglyphs are intentional for jailbreak attacks
"server/__init__.py" = ["N999"]  # Module naming from parent dir
"tests/__init__.py" = ["N999"]
"__init__.py" = ["N999"]  # Directory name has spaces
"deploy-hf-now.py" = ["N999"]
"deploy-hf.py" = ["N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ── MyPy Configuration ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["OpenENV RL Challenge", "tests/", "tools/", "scripts/"]

[[tool.mypy.overrides]]
module = ["server.attacks.*", "openenv_core", "client", "models", "inference_logging"]
ignore_missing_imports = true

# ── Bandit Configuration ────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "tools", "scripts"]
skips = ["B101", "B601", "B104", "B110", "B311"]  # Allow assert, skip paramiko, 0.0.0.0 binding (container req), try/except/pass (graceful degradation), random (non-crypto)

# ── Pytest Configuration ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
